# PPGNN

./: data.py  dirichlet_energy_experiment.py  lvconv.py  main.py  models.py  oversmoothing_experiment.py  power_grid_data.py  ppgnn_v6.py  pyproject.toml  tasks.py  train.py  utils.py
configs/: CS.yaml  CiteSeer.yaml  CiteSeer_v6.yaml  Computers.yaml  Cora.yaml  Cora_v6.yaml  Cornell.yaml  Cornell_v6.yaml  MNIST.yaml  MNIST_v6.yaml  Peptides-struct.yaml  Photo.yaml  PubMed.yaml  PubMed_v6.yaml  Texas.yaml  Texas_v6.yaml  Wisconsin.yaml  Wisconsin_v6.yaml  ZINC.yaml  ogbn-arxiv.yaml  tr20_te100.yaml  tr20_teTexas.yaml
scripts/: junyou_main_hpc.sh
