[project]
name = "ppgnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "gdown>=5.2.0",
    "h5py>=3.14.0",
    "matplotlib>=3.10.5",
    "mlflow>=3.2.0",
    "ogb>=1.3.6",
    "pyg-lib>=0.4.0",
    "torch==2.4.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torch-spline-conv>=1.2.2",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

pyg-lib           = { index = "pyg-cu124" }
torch-scatter     = { index = "pyg-cu124" }
torch-sparse      = { index = "pyg-cu124" }
torch-cluster     = { index = "pyg-cu124" }
torch-spline-conv = { index = "pyg-cu124" }


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pyg-cu124"
url = "https://data.pyg.org/whl/torch-2.4.0+cu124.html"
format = "flat"
explicit = true

